<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vasugupta.homework6_myboundservicetimerapp.MainActivity">

    <Button
        android:id="@+id/watchstop"
        android:layout_width="115dp"
        android:layout_height="53dp"
        android:layout_marginBottom="64dp"
        android:layout_marginTop="65dp"
        android:onClick="ClickStop"
        android:text="@string/timerstop"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/mainstop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mainstart"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/watchstart"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:text="@string/timerstart"
        android:textSize="18sp"
        app:layout_constraintRight_toLeftOf="@+id/watchstop"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="17dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/watchstop"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/illinoistech"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="8dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:text="@string/Activityname"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/mainstart"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="13dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/mainstop"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/StopActivity"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/mainstart"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="192dp"
        app:layout_constraintLeft_toLeftOf="@+id/mainstart" />

    <Button
        android:id="@+id/mainstart"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:elevation="3dp"
        android:text="@string/StartAcivity"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/mainstop"
        android:layout_marginStart="67dp"
        android:layout_marginEnd="67dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="86dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/watchreset"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="17dp"
        android:text="@string/timerreset"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/watchstop"
        app:layout_constraintLeft_toRightOf="@+id/watchstop"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/timevalue"
        android:layout_width="253dp"
        android:layout_height="92dp"
        android:layout_marginBottom="98dp"
        android:layout_marginTop="97dp"
        android:textAlignment="center"
        android:textColor="@color/timercolor"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/watchstart"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>
